--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -476,6 +476,8 @@ transform()
     margin-left 10px
   .create-poll
     margin-bottom 10px
+    h5
+      font-family tahoma, arial
     input
       width 100%
       margin-bottom 5px
@@ -510,6 +512,10 @@ transform()
       .tools
         position absolute
         right 5px
+    .poll
+      padding-bottom 20px
+      .lbl:before
+        margin-right 10px
   .dialogs
     clear left
     margin 0 0 0 30px
