--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -540,6 +540,9 @@ h1 {
 .message-input .create-poll {
   margin-bottom: 10px;
 }
+.message-input .create-poll h5 {
+  font-family: tahoma, arial;
+}
 .message-input .create-poll input {
   width: 100%;
   margin-bottom: 5px;
@@ -585,6 +588,12 @@ h1 {
 .lenta-item .first-message .body .tools {
   position: absolute;
   right: 5px;
+}
+.lenta-item .first-message .poll {
+  padding-bottom: 20px;
+}
+.lenta-item .first-message .poll .lbl:before {
+  margin-right: 10px;
 }
 .lenta-item .dialogs {
   clear: left;
