--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -247,4 +247,38 @@
     margin-bottom 15px
 
     /* registration forum */
+.reg-forum
+  padding-top 60px
+  .row
+    margin 0
+  h4,h2
+    font-family tahoma, arial
+    font-weight normal
+    margin-bottom 20px
+  .reg-left
+    width 90%
+    padding-top 15px
+    max-width 300px
+    margin 0 auto
+    h4
+      margin-bottom 10px
+    .radio
+      display inline-block
+      vertical-align middle
+      padding-left 0
+      margin 5px 10px
+      .lbl:before
+        margin-right 5px
+        position relative
+        top -2px
+    .btn-reg
+      margin-top 10px
+  .reg-right
+    width 100%
+    max-width 300px
+    display block
+    margin 0 auto
+    img
+      width 100%
+
 
