--- a/vonline_be/war/css/login.css
+++ b/vonline_be/war/css/login.css
@@ -307,3 +307,47 @@
   margin-bottom: 15px;
 /* registration forum */
 }
+.reg-forum {
+  padding-top: 60px;
+}
+.reg-forum .row {
+  margin: 0;
+}
+.reg-forum h4,
+.reg-forum h2 {
+  font-family: tahoma, arial;
+  font-weight: normal;
+  margin-bottom: 20px;
+}
+.reg-forum .reg-left {
+  width: 90%;
+  padding-top: 15px;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.reg-forum .reg-left h4 {
+  margin-bottom: 10px;
+}
+.reg-forum .reg-left .radio {
+  display: inline-block;
+  vertical-align: middle;
+  padding-left: 0;
+  margin: 5px 10px;
+}
+.reg-forum .reg-left .radio .lbl:before {
+  margin-right: 5px;
+  position: relative;
+  top: -2px;
+}
+.reg-forum .reg-left .btn-reg {
+  margin-top: 10px;
+}
+.reg-forum .reg-right {
+  width: 100%;
+  max-width: 300px;
+  display: block;
+  margin: 0 auto;
+}
+.reg-forum .reg-right img {
+  width: 100%;
+}
