--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -248,7 +248,12 @@
 
     /* registration forum */
 .reg-forum
-  padding-top 60px
+  //padding-top 60px
+  header
+    padding 20px 0
+    border-bottom 1px solid #438eb9
+    img
+      width 200px
   .row
     margin 0
   h4,h2
