no resize textarea

--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -524,6 +524,9 @@ h1 {
   background: #4184af !important;
   border-color: #4184af !important;
 }
+.no-resize {
+  resize: none;
+}
 .message-input {
   padding: 10px;
   margin-bottom: 20px;
