--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -463,6 +463,8 @@ transform()
 .btn-info.no-border.active
   background #4184AF !important
   border-color #4184AF !important
+.no-resize
+  resize none
 
 .message-input
   padding 10px
