--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -540,24 +540,24 @@ h1 {
 .message-input .hashtag {
   margin-left: 10px;
 }
-.message-input .create-poll {
+.create-poll {
   margin-bottom: 10px;
 }
-.message-input .create-poll h5 {
+.create-poll h5 {
   font-family: tahoma, arial;
 }
-.message-input .create-poll input {
+.create-poll input {
   width: 100%;
   margin-bottom: 5px;
 }
-.message-input .create-poll .poll-readonly {
+.create-poll .poll-readonly {
   cursor: text;
 }
-.message-input .create-poll .poll-cancel {
+.create-poll .poll-cancel {
   font-size: 24px;
   margin-top: -10px;
 }
-.message-input .create-poll .poll-cancel:hover {
+.create-poll .poll-cancel:hover {
   text-decoration: none;
 }
 .lenta-item {
@@ -643,6 +643,15 @@ h1 {
   padding: 0 10px;
 /* private-messages */
 }
+.talks-block .talks-single {
+  padding-top: 10px;
+}
+.talks-block .talks-single .dd-item {
+  margin-top: 0;
+}
+.talks-block .talks-single .dd-item .dd2-content {
+  margin-top: 0;
+}
 .talks-block .answer-input textarea {
   width: 88%;
   margin-bottom: 10px;
@@ -653,6 +662,9 @@ h1 {
 .talks-block .message-bottom {
   position: absolute;
   bottom: 5px;
+}
+.talks-block .poll {
+  padding-bottom: 30px;
 }
 .private-messages {
   padding: 10px;
