--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -476,20 +476,21 @@ transform()
     margin-bottom 10px
   .hashtag
     margin-left 10px
-  .create-poll
-    margin-bottom 10px
-    h5
-      font-family tahoma, arial
-    input
-      width 100%
-      margin-bottom 5px
-    .poll-readonly
-      cursor text
-    .poll-cancel
-      font-size 24px
-      margin-top -10px
-      &:hover
-        text-decoration none
+
+.create-poll
+  margin-bottom 10px
+  h5
+    font-family tahoma, arial
+  input
+    width 100%
+    margin-bottom 5px
+  .poll-readonly
+    cursor text
+  .poll-cancel
+    font-size 24px
+    margin-top -10px
+    &:hover
+      text-decoration none
 
 .lenta-item
   margin-bottom 20px
@@ -554,6 +555,12 @@ transform()
 
 .talks-block
   padding 0 10px
+  .talks-single
+    padding-top 10px
+    .dd-item
+      margin-top 0
+      .dd2-content
+        margin-top 0
   .answer-input
     textarea
       width 88%
@@ -563,6 +570,8 @@ transform()
   .message-bottom
     position absolute
     bottom 5px
+  .poll
+    padding-bottom 30px
 
   /* private-messages */
 .private-messages
