--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -492,6 +492,24 @@ transform()
     &:hover
       text-decoration none
 
+.poll-results
+  .poll-result-item
+    margin-bottom 10px
+    .poll-result-variant
+      font-size 14px
+    .poll-row
+      .poll-row-line
+        display inline-block
+        color #8BA1BC
+        width 84%
+        .poll-line-percent
+          background-color #DAE1E8
+        .poll-line-number
+          background-color #F7F7F7
+      .poll-row-percent
+        display inline-block
+        width 15%
+
 .lenta-item
   margin-bottom 20px
   .wallitem-message
