--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -73,8 +73,8 @@
         input
           margin-bottom 10px
 
-.short.form-control
-  width 75px !important
+/*.short.form-control
+  width 75px !important*/
 
 .datepicker-simple
   width 470px !important
