--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -686,3 +686,8 @@ transform()
       width 150px
   .user-body-right
     margin-left 170px
+    .home-map
+      padding 0 10px 10px 0
+      img
+        width 100%
+        display block
