--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -498,6 +498,7 @@ h1 {
   width: 100%;
   height: 90px;
   margin-bottom: 10px;
+  overflow: hidden;
 }
 .create-topic >.btn-group {
   float: right;
@@ -538,6 +539,7 @@ h1 {
   width: 100%;
   height: 90px;
   margin-bottom: 10px;
+  overflow: hidden;
 }
 .message-input .hashtag {
   margin-left: 10px;
@@ -637,6 +639,7 @@ h1 {
 }
 .lenta-item .message-textarea {
   width: 99%;
+  overflow: hidden;
 }
 .lenta-item .lenta-item-bottom {
   position: absolute;
@@ -686,6 +689,7 @@ h1 {
 .talks-block .answer-input textarea {
   width: 88%;
   margin-bottom: 10px;
+  overflow: hidden;
 }
 .talks-block .widget-main {
   position: relative;
