--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -445,6 +445,7 @@ transform()
       width 100%
       height 90px
       margin-bottom 10px
+      overflow hidden
   >.btn-group
     float right
     margin-left 5px
@@ -476,6 +477,7 @@ transform()
     width 100%
     height 90px
     margin-bottom 10px
+    overflow hidden
   .hashtag
     margin-left 10px
 
@@ -553,6 +555,7 @@ transform()
     padding-right 0
   .message-textarea
     width 99%
+    overflow hidden
   .lenta-item-bottom
     position absolute
     bottom 3px
@@ -592,6 +595,7 @@ transform()
     textarea
       width 88%
       margin-bottom 10px
+      overflow hidden
   .widget-main
     position relative
   .message-bottom
