--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -445,6 +445,7 @@ transform()
       width 100%
       height 90px
       margin-bottom 10px
+      overflow hidden
   >.btn-group
     float right
     margin-left 5px
@@ -476,6 +477,7 @@ transform()
     width 100%
     height 90px
     margin-bottom 10px
+    overflow hidden
   .hashtag
     margin-left 10px
 
@@ -504,10 +506,15 @@ transform()
         display inline-block
         color #8BA1BC
         width 84%
+        text-align center
+        line-height 15px
+        background-color #F7F7F7
         .poll-line-percent
           background-color #DAE1E8
+          height 15px
         .poll-line-number
-          background-color #F7F7F7
+          height 15px
+          margin-top -15px
       .poll-row-percent
         display inline-block
         width 15%
@@ -539,6 +546,8 @@ transform()
       padding-bottom 20px
       .lbl:before
         margin-right 10px
+      h5
+        font-family tahoma, arial
   .dialogs
     clear left
     margin 0 0 0 30px
@@ -546,6 +555,7 @@ transform()
     padding-right 0
   .message-textarea
     width 99%
+    overflow hidden
   .lenta-item-bottom
     position absolute
     bottom 3px
@@ -585,6 +595,7 @@ transform()
     textarea
       width 88%
       margin-bottom 10px
+      overflow hidden
   .widget-main
     position relative
   .message-bottom
@@ -592,6 +603,10 @@ transform()
     bottom 5px
   .poll
     padding-bottom 30px
+    .radio .lbl:before
+      margin-right 10px
+    h5
+      font-family tahoma, arial
 
   /* private-messages */
 .private-messages
@@ -675,3 +690,8 @@ transform()
       width 150px
   .user-body-right
     margin-left 170px
+    .home-map
+      padding 0 10px 10px 0
+      img
+        width 100%
+        display block
