new for landing, login, load shop

--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1299,6 +1299,9 @@ height 50px
     display none
   .shop-about
     display block
+    img
+      display block
+      margin 0 auto
 
 /* error */
 .modal-error
