--- a/vonline_be/war/css/login.css
+++ b/vonline_be/war/css/login.css
@@ -159,6 +159,21 @@
   margin-right: 15px;
   float: right;
 }
+.or {
+  font-size: 20px;
+  margin: 5px 0;
+}
+.login-close {
+  font-size: 24px;
+  margin: 5px 5px 0 0;
+  outline: none;
+  line-height: 24px;
+  background: none;
+  border: none;
+}
+.login-close:hover {
+  text-decoration: none;
+}
 @media all and (max-width: 650px) {
   .modal-auth {
     width: 100% !important;
