--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1563,6 +1563,10 @@ height 50px
 .page-about-shop .shop-about {
   display: block;
 }
+.page-about-shop .shop-about img {
+  display: block;
+  margin: 0 auto;
+}
 /* error */
 .modal-error {
   height: 130px;
