--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -86,11 +86,13 @@ transform()
     padding 0
     display inline-block
     float none
-  a.about-shop-link
+  a.header-link
     display inline-block
     color #fff
+    margin-left 5px
     &:hover
       text-decoration none
+      border-bottom 1px solid #fff
   img
     height 45px
 
