--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1818,6 +1818,15 @@ height 50px
   height: 30px;
   line-height: 30px;
 }
+.bo-settings .add-delivery-interval {
+  display: inline-block;
+  font-size: 30px;
+  position: relative;
+  top: 6px;
+}
+.bo-settings .add-delivery-interval:hover {
+  text-decoration: none;
+}
 .bo-settings #settings-delivery .delivery-price-type {
   padding-left: 30px;
 }
@@ -1831,15 +1840,6 @@ height 50px
   display: inline-block;
   margin-left: 5px;
   margin-right: 15px;
-}
-.bo-settings #settings-delivery .delivery-price-type .add-delivery-interval {
-  display: inline-block;
-  font-size: 30px;
-  position: relative;
-  top: 6px;
-}
-.bo-settings #settings-delivery .delivery-price-type .add-delivery-interval:hover {
-  text-decoration: none;
 }
 .bo-settings #settings-delivery .delivery-area {
   margin-top: 10px;
@@ -1860,20 +1860,32 @@ height 50px
   color: #f00;
   font-size: 30px;
 }
-.bo-settings #settings-shedule .shedule-date,
-.bo-settings #settings-shedule .shedule-confirm {
-  display: inline-block;
-}
-.bo-settings #settings-shedule .shedule-confirm {
-  margin-left: 10px;
+.bo-settings #settings-shedule .shedule-item {
+  border: 1px solid #ccc;
+  padding: 10px;
   margin-top: 10px;
-  position: relative;
-  top: 4px;
+  width: 500px;
 }
-.bo-settings #settings-shedule .shedule-confirm input {
+.bo-settings #settings-shedule .shedule-item .delivery-day-dropdown {
+  top: -2px;
+  margin: 0 5px;
+}
+.bo-settings #settings-shedule .shedule-item .delivery-day-dropdown .dropdown-menu {
+  min-width: 30px;
+}
+.bo-settings #settings-shedule .shedule-item input {
   width: 50px;
   display: inline-block;
   margin: 0 10px;
+}
+.bo-settings #settings-shedule .shedule-item .add-delivery-interval {
+  position: relative;
+  right: -40px;
+  top: -7px;
+}
+.bo-settings #settings-shedule .shedule-date,
+.bo-settings #settings-shedule .shedule-confirm {
+  display: inline-block;
 }
 .bo-settings #settings-shedule .datepicker {
   margin-left: 0;
@@ -1897,6 +1909,9 @@ height 50px
 }
 .bo-settings #settings-shedule .datepicker td.selected .remove-date:hover {
   text-decoration: none;
+}
+.bo-settings #settings-shedule .btn-save {
+  margin-top: 10px;
 }
 .bo-edit .table-add {
   display: none;
