--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1551,6 +1551,11 @@ height 50px
         margin  0 5px
         .dropdown-menu
           min-width 30px
+          .disable
+            a
+              color #ccc
+            &:hover
+              background none
       input
         width 50px //
         display inline-block
