--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1528,10 +1528,16 @@ height 50px
         margin-left 5px
         margin-right 15px
     .delivery-area
+    .delivery-type
       margin-top 10px
       span
         display inline-block
-        font-size 14px 
+        width 70px
+        font-size 14px
+    .delivery-area input[type="text"]
+      width 50%
+    .delivery-type input[type="text"]
+      width 60px
     input[type=checkbox].ace+.lbl::before, input[type=radio].ace+.lbl::before
       vertical-align top
       margin-right 5px
