--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -1,4 +1,4 @@
-@import 'common.css'
+//@import 'common.css'
 
 /* страница регистрации */
 
@@ -17,7 +17,7 @@
 .login-box
 .signup-box
 .forgot-box
-  padding 6px
+  padding 6px //
   background-color #394557
   .widget-body
     background #f7f7f7
