--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1,6 +1,7 @@
 //@import 'common.css'
 @import 'lib/flexslider.css'
-@import 'login.css' // with common.css
+@import 'common.css'
+@import 'login.css'
 
 main-radius = 2px
 second-radius = 1px
@@ -1063,7 +1064,7 @@ height 50px
   .btn
     width 150px
     display block
-    margin 5px auto 0
+    margin 5px auto 0 //
 
 /* popup логина */
 .modal-auth
