--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -2219,7 +2219,7 @@ height 50px
 .adminka table .admin-item .remove-admin-item:hover {
   text-decoration: none;
 }
-.adminka-users {
+.adminka-statistics {
   display: none;
 }
 .full-text {
