--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1824,9 +1824,8 @@ height 50px
           text-decoration none
 
 
-.adminka-users
+.adminka-statistics
   display none
-
 
 .full-text
   display none
