--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1823,9 +1823,17 @@ height 50px
         &:hover
           text-decoration none
 
-
 .adminka-statistics
   display none
+  .date-picker
+    width 100px
+    display inline-block
+  .adminka-statistics-date
+    display inline-block
+    label
+      margin 0 10px
+    .btn
+      margin-left 20px
 
 .full-text
   display none
