--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1517,6 +1517,13 @@ height 50px
     top 6px
     &:hover
       text-decoration none
+  #settings-links
+    .settings-links-item
+      margin-bottom 5px
+      label
+        width 100px
+      input
+        width 200px
   #settings-delivery
     .delivery-price-type
       padding-left 30px
