some bugs and activate shops

--- a/vonline_be/war/css/landing/basic-style.css
+++ b/vonline_be/war/css/landing/basic-style.css
@@ -592,6 +592,7 @@ PRINT STYLESHEET
     font-size: 14px;
 }
 .shops ul li .voice-counter{
+    clear: left;
     width: 100px;
     text-align: right;
     float: left;
