--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1782,9 +1782,11 @@ height 50px
       border 1px solid #ccc
       padding 10px
       line-height 16px
-      width 24%
+      width 27%
       &.td-icon
         width 4%
+      &.shop-activation
+        width 17%
     .td-icon //
       text-align center
       padding-left 0
