--- a/vonline_be/war/css/common.css
+++ b/vonline_be/war/css/common.css
@@ -4,7 +4,7 @@
 @import 'lib/ace-fonts.css';
 @import 'lib/ace.css';
 @import 'profile.css';
-@import 'settings.css';
+@import 'editPersonal.css';
 .error-info,
 .confirm-info {
   display: none;
