--- a/vonline_be/war/css/editPersonal.styl
+++ b/vonline_be/war/css/editPersonal.styl
@@ -1,4 +1,28 @@
 
+.edit-personal
+  padding 0 10px
+  h3
+    margin-top 0
+    padding-top 10px
+  label
+    display inline-block
+    width 160px
+  .form-control
+    display inline-block
+    width 233px
+    margin 0 0 10px 0
+  .subs-group
+    display inline-block
+    border-left 1px solid #2b7dbc
+    padding-left 15px
+  .checkbox label
+    width auto
+  input[type="text"]
+  input[type="email"]
+  textarea
+    margin-bottom 10px
+    width 233px
+
 .user-descr
   padding 0 0 0 10px
   font-size 14px
@@ -21,7 +45,7 @@
       font-size 34px
       margin 10px 5px 0 5px
   .text-area
-    margin 0 200px 0 215px
+    //margin 0 200px 0 215px
     .user-head
       h1
         display inline-block
