--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -433,6 +433,7 @@ th.next,
   margin-left: 0;
 }
 .shop-menu ul li {
+  position: relative;
   list-style: none;
   float: left;
   margin-bottom: 10px;
@@ -447,7 +448,10 @@ th.next,
 .shop-menu ul li.active a {
   color: #2a6496;
 }
-.shop-menu ul li a {
+.shop-menu ul li a.btn-app,
+.shop-menu ul li a.shopmenu-back {
+  position: relative;
+  z-index: 2;
   display: block;
   font-size: 20px;
   line-height: 28px !important;
@@ -457,16 +461,19 @@ th.next,
   border: 1px solid #438eb9;
   white-space: normal;
 }
-.shop-menu ul li a:hover {
+.shop-menu ul li a.btn-app:hover,
+.shop-menu ul li a.shopmenu-back:hover {
   text-decoration: none;
 }
-.shop-menu ul li a span {
+.shop-menu ul li a.btn-app span,
+.shop-menu ul li a.shopmenu-back span {
   font-size: 12px;
   line-height: 16px;
   display: inline-block;
   vertical-align: middle;
 }
-.shop-menu ul li a .fa {
+.shop-menu ul li a.btn-app .fa,
+.shop-menu ul li a.shopmenu-back .fa {
   display: none;
 }
 .shop-menu ul li a.shopmenu-back {
@@ -476,6 +483,29 @@ th.next,
 }
 .shop-menu ul li a.shopmenu-back .fa {
   display: block;
+}
+.shop-menu ul li .category-label {
+  position: absolute;
+  background: url("../i/label.png");
+  width: 20px;
+  height: 20px;
+  top: 2px;
+  right: -2px;
+  z-index: 51;
+}
+.shop-menu ul li .category-soc-links {
+  position: absolute;
+  height: 20px;
+  top: 0;
+  right: 0;
+}
+.shop-menu ul li .category-soc-links .category-soc-single {
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+}
+.shop-menu ul li .category-soc-links .category-soc-single img {
+  width: 100%;
 }
 .catalog-head table {
   background: #f9f9f9;
@@ -844,6 +874,10 @@ th.next,
 }
 .modal h3 {
   margin-top: 0;
+  display: inline-block;
+}
+.modal .product-soc-links {
+  display: inline-block;
 }
 .modal .product-text {
   text-align: left;
