--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1766,6 +1766,13 @@ height 50px
           min-width 30px //
           .remove-item
             font-size 16px
+      &links
+        td
+          border 0
+        td.td-remove-link
+          min-width 30px //
+        .remove-item
+          font-size 16px
       &producer
         >span
           display block
@@ -1806,6 +1813,12 @@ height 50px
     .category-remove
       width 4%
       text-align center
+    .category-links
+      table
+        margin 0
+        .td-remove-link
+          width 5%
+          min-width 0
     .dropdown-menu
       margin-left -50px
   #edit-producer
