--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -283,6 +283,11 @@ transform()
     display none
     opacity .5
 
+.catalog-order
+.catalog-confirm
+  .td-producer
+    display none
+
 .tabs-right > .nav-tabs > li > a
   min-width 40px
   margin-right 0 !important
@@ -748,11 +753,14 @@ th.next
         line-height 60px !important
   .product-descr
      margin-left 210px
+     margin-right 17px
     h3
       margin-top 0
       display inline-block
     .product-soc-links
       display inline-block
+    .modal-producer
+      font-size 13px //
     .product-text
       //height 90px
       //overflow auto
@@ -768,7 +776,7 @@ th.next
     .modal-footer
       position absolute
       overflow auto
-      min-height 55px
+      min-height 56px
       //height 60px
       //top 125px
       margin-top 0
@@ -1184,6 +1192,7 @@ height 50px
       font-weight bold
   .additionally-order
     padding 0 10px
+    padding-bottom 60px
   .delivery-right
     margin-top 40px
     h3
@@ -1248,7 +1257,8 @@ height 50px
   text-align center
   .to-main-link
     float left
-    margin 10px 0
+    margin 10px 0 0 0
+    padding-bottom 20px
   .order-end-in
     min-width 768px
     width 80%
